--- a/content/product.html
+++ b/content/product.html
@@ -1,144 +1,80 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <title>Danh sách sản phẩm</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      padding: 40px;
-      background-color: #f3efea;
-      color: #4e342e;
-      max-width: 1000px;
-      margin: auto;
-    }
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 40px;
+    background-color: #f3efea;
+    color: #4e342e;
+    max-width: 1200px;
+    margin: auto;
+  }
 
-    h1 {
-      text-align: center;
-      color: #5d4037;
-      margin-bottom: 30px;
-    }
+  h1 {
+    text-align: center;
+    color: #5d4037;
+    margin-bottom: 30px;
+  }
 
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      background: #fff8f1;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-      overflow: hidden;
-    }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    background: #fff8f1;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+    table-layout: auto;
+  }
 
-    th, td {
-      padding: 12px 15px;
-      text-align: left;
-    }
+  th, td {
+    padding: 16px 20px;
+    text-align: left;
+    font-size: 15px;
+  }
 
-    th {
-      background-color: #8d6e63;
-      color: #fff;
-      font-weight: bold;
-    }
+  th {
+    background-color: #8d6e63;
+    color: #fff;
+    font-weight: bold;
+  }
 
-    tr:nth-child(even) {
-      background-color: #f5f0ec;
-    }
+  tr:nth-child(even) {
+    background-color: #f5f0ec;
+  }
 
-    img {
-      width: 50px;
-      height: auto;
-      border-radius: 4px;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-    }
+  img {
+    width: 70px;
+    height: auto;
+    border-radius: 4px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  }
 
-    button {
-      padding: 6px 12px;
-      margin-right: 5px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-weight: 500;
-      transition: background-color 0.3s ease;
-    }
+  button {
+    padding: 6px 12px;
+    margin-right: 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: background-color 0.3s ease;
+  }
 
-    button:hover {
-      opacity: 0.9;
-    }
+  button:hover {
+    opacity: 0.9;
+  }
 
-    button:first-child {
-      background-color: #6d4c41;
-      color: white;
-    }
+  button:first-child {
+    background-color: #6d4c41;
+    color: white;
+  }
 
-    button:last-child {
-      background-color: #bf360c;
-      color: white;
-    }
+  button:last-child {
+    background-color: #bf360c;
+    color: white;
+  }
 
-    td[title] {
-      max-width: 200px;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-  </style>
-</head>
-<body>
-  <h1>📦 Danh sách sản phẩm</h1>
-  <table id="product-table">
-    <thead>
-      <tr>
-        <th>Tên</th>
-        <th>Giá</th>
-        <th>Số lượng</th>
-        <th>Ảnh</th>
-        <th>Mô tả</th>
-        <th>Hành động</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <script>
-    async function fetchProducts() {
-      try {
-        const res = await fetch('https://backend-7j0i.onrender.com/products');
-        if (!res.ok) throw new Error(`Lỗi: ${res.status}`);
-        const data = await res.json();
-
-        const tbody = document.querySelector('tbody');
-        tbody.innerHTML = '';
-
-        data.forEach(p => {
-          const row = document.createElement('tr');
-          row.innerHTML = `
-            <td>${p.name}</td>
-            <td>${p.price.toLocaleString('vi-VN')}₫</td>
-            <td>${p.quantity || '-'}</td>
-            <td><img src="${p.images.trim()}" alt="${p.name}"></td>
-            <td title="${p.about}">${p.about ? p.about.slice(0, 50) + '...' : ''}</td>
-            <td>
-              <button onclick="editProduct('${p._id}')">Sửa</button>
-              <button onclick="deleteProduct('${p._id}')">Xóa</button>
-            </td>
-          `;
-          tbody.appendChild(row);
-        });
-
-      } catch (err) {
-        console.error('Lỗi khi fetch sản phẩm:', err);
-        alert('Không thể tải danh sách sản phẩm.');
-      }
-    }
-
-    function editProduct(id) {
-      window.location.href = `product-edit.html?id=${id}`;
-    }
-
-    function deleteProduct(id) {
-      alert(`Bạn cần cấu hình API xóa cho ID: ${id}`);
-    }
-
-    fetchProducts();
-  </script>
-</body>
-</html>
+  td[title] {
+    max-width: 350px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+</style>
