--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 
   <section>
     <div class="section-title">Sản phẩm nổi bật</div>
-     <div id="admin-controls" style="display: none; margin-bottom: 1em;">
-        <button onclick="alert('Thêm sản phẩm')">➕ Thêm sản phẩm</button>
-    </div>
+    <div id="admin-controls" style="display: none; margin-bottom: 1em;">
+  <button class="add-btn" onclick="alert('Thêm sản phẩm')">➕ Thêm sản phẩm</button>
+</div>
+
 
     <div class="products" id="product-list">
     </div>
