--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
   <section>
     <div class="section-title">Sản phẩm nổi bật</div>
     <div id="admin-controls" style="display: none; margin-bottom: 1em;">
-  <button class="add-btn" onclick="alert('Thêm sản phẩm')">➕ Thêm sản phẩm</button>
+  <button class="add-btn" onclick="window.location.href='product-add.html'">➕ Thêm sản phẩm</button>
+
 </div>
 
 
