--- a/content/product-edit.html
+++ b/content/product-edit.html
@@ -158,7 +158,7 @@
 
     if (res.ok) {
       alert('✅ Đã cập nhật sản phẩm!');
-      window.location.href = 'products.html';
+      window.location.href = 'index.html';
     } else {
       alert('❌ Cập nhật thất bại');
     }
