--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,8 @@
-<footer>
-  © 2025 MintShop. All rights reserved. Thiết kế bởi bạn 💼
+<footer style="background-color: #f0f0f0; padding: 30px; display: flex; flex-direction: column; align-items: center;">
+  <div style="margin-bottom: 10px;">
+    <strong>MintShop</strong> © 2025. All rights reserved. Thiết kế bởi bạn 💼
+  </div>
+  <div style="margin-bottom: 5px;">📞 Liên hệ: 0123 456 789</div>
+  <div style="margin-bottom: 5px;">📧 Email: mintshop@gmail.com</div>
+  <div>🏠 Địa chỉ: 123 Đường Trần Hưng Đạo, Quận 1, TP. Hồ Chí Minh</div>
 </footer>
