--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<footer style="background-color: #f0f0f0; padding: 30px; display: flex; flex-direction: column; align-items: center;">
+<footer style="background-color: #8B4513; color: white; padding: 30px; text-align: center;">
   <div style="margin-bottom: 10px;">
     <strong>MintShop</strong> © 2025. All rights reserved. Thiết kế bởi bạn 💼
   </div>
