--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<footer style="background-color: #8B4513; color: white; padding: 30px; text-align: center;">
+<footer style="background-color: #4B2E2B; color: white; padding: 30px; text-align: center;">
   <div style="margin-bottom: 10px;">
     <strong>MintShop</strong> © 2025. All rights reserved. Thiết kế bởi bạn 💼
   </div>
