--- a/login.html
+++ b/login.html
@@ -78,6 +78,7 @@
       <button type="submit">Đăng nhập</button>
     </form>
     <p id="login-error"></p>
+    <p>Bạn chưa có tài khoản? <a href="register.html" style="color: #a47148; text-decoration: none;">Đăng ký</a></p>
   </div>
 
   <script src="login.js"></script>
