--- a/about.html
+++ b/about.html
@@ -42,6 +42,13 @@
       margin-bottom: 20px;
     }
 
+    .product-about {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #4b3621;
+      margin-bottom: 30px;
+    }
+    
     .back-btn {
       display: inline-block;
       margin-top: 30px;
@@ -76,6 +83,7 @@
             <img src="${product.images}" alt="${product.name}" class="product-img" />
             <div class="product-name">${product.name}</div>
             <div class="product-price">${product.price.toLocaleString()}₫</div>
+            <div class="product-about">${product.about}</div>
             <a href="index.html" class="back-btn">← Quay lại</a>
           `;
         })
