--- a/about.html
+++ b/about.html
@@ -12,60 +12,77 @@
     }
 
     .container {
-      max-width: 800px;
-      margin: 40px auto;
+      max-width: 1000px;
+      margin: 50px auto;
       background-color: #fff8f0;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       border-radius: 12px;
-      overflow: hidden;
-      padding: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      display: flex;
+      gap: 30px;
+      padding: 30px;
+      align-items: flex-start;
     }
 
     .product-img {
-      width: 100%;
-      max-height: 400px;
+      width: 45%;
+      max-height: 500px;
       object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 20px;
+      border-radius: 10px;
+    }
+
+    .product-info {
+      width: 55%;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
     }
 
     .product-name {
-      font-size: 28px;
+      font-size: 30px;
       font-weight: bold;
-      margin-bottom: 10px;
       color: #5a3c2e;
     }
 
     .product-price {
       font-size: 22px;
       color: #a0522d;
-      margin-bottom: 20px;
     }
 
     .product-about {
       font-size: 16px;
       line-height: 1.6;
       color: #4b3621;
-      margin-bottom: 30px;
-    }
-    
-    .back-btn {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 10px 20px;
-      background-color: #8b5e3c;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      transition: background-color 0.3s ease;
     }
 
-    .back-btn:hover {
+    .add-to-cart {
+      padding: 12px 24px;
+      background-color: #8b5e3c;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      width: fit-content;
+    }
+
+    .add-to-cart:hover {
       background-color: #5a3c2e;
+    }
+
+    .back-btn {
+      margin-top: 30px;
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #d2b48c;
+      color: #3e2c23;
+      text-decoration: none;
+      border-radius: 6px;
     }
   </style>
 </head>
 <body>
+
   <div class="container" id="product-detail">
     <p>Đang tải thông tin sản phẩm...</p>
   </div>
@@ -81,10 +98,18 @@
         .then(product => {
           container.innerHTML = `
             <img src="${product.images}" alt="${product.name}" class="product-img" />
-            <div class="product-name">${product.name}</div>
-            <div class="product-price">${product.price.toLocaleString()}₫</div>
-            <div class="product-about">${product.about}</div>
-            <a href="index.html" class="back-btn">← Quay lại</a>
+            <div class="product-info">
+              <div class="product-name">${product.name}</div>
+              <div class="product-price">${product.price.toLocaleString()}₫</div>
+              <div class="product-about">
+                ${product.about || "Chiếc váy dự tiệc sang trọng, tôn dáng, thích hợp cho các buổi tiệc tối, sự kiện..."}
+              </div>
+              <button class="add-to-cart"
+                onclick="addToCart('${product._id}', '${product.name}', ${product.price}, '${product.images}')">
+                🛒 Thêm vào giỏ
+              </button>
+              <a href="index.html" class="back-btn">← Quay lại trang chính</a>
+            </div>
           `;
         })
         .catch(err => {
@@ -93,6 +118,13 @@
         });
     } else {
       container.innerHTML = '<p>Không tìm thấy sản phẩm.</p>';
+    }
+
+    function addToCart(id, name, price, images) {
+      const cart = JSON.parse(localStorage.getItem('cart')) || [];
+      cart.push({ id, name, price, images, quantity: 1 });
+      localStorage.setItem('cart', JSON.stringify(cart));
+      alert('Đã thêm vào giỏ hàng!');
     }
   </script>
 </body>
