--- a/about.html
+++ b/about.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Chi Tiết Sản Phẩm</title>
+  <nav class="navbar">
+  <div class="logo">MintShop</div>
+  <div class="nav-links" id="nav-auth-links">
+    <!-- render bằng JS -->
+  </div>
+</nav>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
