--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Chi Tiết Sản Phẩm</title>
+  <link rel="stylesheet" href="style.css" />
   <nav class="navbar">
   <div class="logo">MintShop</div>
   <div class="nav-links" id="nav-auth-links">
