--- a/about.html
+++ b/about.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Chi Tiết Sản Phẩm</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
-  <nav class="navbar">
-  <div class="logo">MintShop</div>
-  <div class="nav-links" id="nav-auth-links">
-    <!-- render bằng JS -->
-  </div>
-</nav>
+    <nav class="navbar">
+    <div class="logo">MintShop</div>
+    <div class="nav-links" id="nav-auth-links">
+      <!-- render bằng JS -->
+    </div>
+    </nav>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
