--- a/about.html
+++ b/about.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chi Tiết Sản Phẩm</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+</head>
     <nav class="navbar">
     <div class="logo">MintShop</div>
     <div class="nav-links" id="nav-auth-links">
