--- a/about.html
+++ b/about.html
@@ -81,14 +81,19 @@
     }
 
     .back-btn {
-      margin-top: 30px;
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #d2b48c;
-      color: #3e2c23;
-      text-decoration: none;
-      border-radius: 6px;
-    }
+  margin-top: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 24px; /* giống .add-to-cart */
+  background-color: #d2b48c;
+  color: #3e2c23;
+  text-decoration: none;
+  border-radius: 6px;
+  font-size: 16px;
+  height: 44px; /* hoặc tương tự với .add-to-cart */
+}
+
   </style>
 </head>
 <body>
