--- a/about.html
+++ b/about.html
@@ -41,12 +41,13 @@
     }
 
     .product-info {
-      width: 55%;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  position: relative;
+  padding-bottom: 20px;
+}
     .product-name {
       font-size: 30px;
       font-weight: bold;
