--- a/content/product-add.html
+++ b/content/product-add.html
@@ -217,7 +217,7 @@
       }
 
       // Thêm token ở đây nếu cần
-
+      const token = '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'; // Thay token thật
       try {
         const res = await fetch('https://backend-7j0i.onrender.com/products', {
           method: 'POST',
