--- a/content/product-add.html
+++ b/content/product-add.html
@@ -137,18 +137,33 @@
 
     // Hàm upload base64 lên backend, trả về URL ảnh trên Github
     async function uploadImage(base64, filename) {
-      try {
-        const res = await fetch('https://backend-7j0i.onrender.com/upload', { // đổi thành URL backend của bạn
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({
+  try {
+    const res = await fetch('https://backend-7j0i.onrender.com/upload', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({
         filename,
-        imageBase64: base64, // ✅ Sửa tên trường cho đúng với backend
+        imageBase64: base64,
       }),
+    });
 
-        });
+    const contentType = res.headers.get('content-type');
+    if (contentType && contentType.includes('application/json')) {
+      const data = await res.json();
+      console.log("Ảnh đã upload:", data);
+      return data;
+    } else {
+      const text = await res.text();
+      throw new Error("Backend trả về HTML hoặc lỗi: " + text);
+    }
+
+  } catch (err) {
+    alert("Lỗi kết nối upload ảnh: " + err.message);
+  }
+}
+
 
         const data = await res.json();
         if (res.ok && data.url) {
